# core-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  REVIEW-CODEX.md
bindings/dotnet/: Pdtf.Core.sln  README.md
bindings/dotnet-ffi/: Cargo.toml
bindings/dotnet-ffi/src/: lib.rs
bindings/dotnet/Pdtf.Core/: NativeMethods.cs  Pdtf.Core.csproj  PdtfCore.cs  PdtfException.cs
bindings/dotnet/Pdtf.Core.Tests/: CrossLanguageTests.cs  DidTests.cs  KeyTests.cs  Pdtf.Core.Tests.csproj  SignerTests.cs  StatusListTests.cs  TirTests.cs
bindings/dotnet/Pdtf.Core/Models/: DidDocument.cs  KeyPair.cs  StatusList.cs  TirVerificationResult.cs  VerifiableCredential.cs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_cross_language.py
crates/pdtf-core/: Cargo.toml
crates/pdtf-core/src/: error.rs  lib.rs  types.rs
crates/pdtf-core/src/did/: did_key.rs  did_web.rs  mod.rs  resolver.rs  urn.rs
crates/pdtf-core/src/federation/: client.rs  mod.rs  openid.rs  path_match.rs  verify.rs
crates/pdtf-core/src/keys/: ed25519.rs  mod.rs  provider.rs
crates/pdtf-core/src/signer/: mod.rs  proof.rs
crates/pdtf-core/src/status/: bitstring.rs  mod.rs
crates/pdtf-core/src/tir/: client.rs  mod.rs  path_match.rs  verify.rs
crates/pdtf-core/src/validator/: mod.rs  verify.rs
crates/pdtf-core/tests/: cross_language.rs
test-vectors/: vectors.json
