[package]
name = "pdtf-core-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for PDTF 2.0 core library — targets .NET P/Invoke"
license = "MIT"

[lib]
name = "pdtf_core_ffi"
crate-type = ["cdylib"]

[dependencies]
pdtf-core = { path = "../../crates/pdtf-core", default-features = false }
serde_json = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
sha2 = "0.10"
json-canon = "0.1"
