[package]
name = "pdtf-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for PDTF 2.0 core library"
license = "MIT"

[lib]
name = "pdtf_core"
crate-type = ["cdylib"]

[dependencies]
pdtf-core = { path = "../../crates/pdtf-core", default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
sha2 = "0.10"
json-canon = "0.1"
tokio = { version = "1", features = ["rt"] }
