[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pdtf-core"
version = "0.1.0"
description = "PDTF 2.0 core library — Python bindings"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Ed Molyneux", email = "ed@propdata.org.uk" }]

[tool.maturin]
features = ["pyo3/extension-module"]
