[package]
name = "pdtf-core"
version = "0.1.0"
edition = "2021"
description = "PDTF 2.0 cryptographic core — Ed25519 signing/verification, DIDs, VCs, Bitstring Status List, Federation Trust Registry"
license = "MIT"
authors = ["Ed Molyneux <ed@moverly.com>"]
repository = "https://github.com/property-data-standards-co/core-rs"

[dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-canon = "0.1"

# Multibase / multicodec
multibase = "0.9"
bs58 = "0.5"

# HTTP
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Compression
flate2 = "1"

# Cache
lru = "0.12"

# Timestamps
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Errors
thiserror = "2"

# Base64
base64 = "0.22"

# Regex (for URN validation)
regex = "1"
once_cell = "1"

# Async
async-trait = "0.1"

# URL encoding
urlencoding = "2"

[features]
default = ["network"]
network = ["dep:reqwest", "dep:tokio", "reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
